--- a/Week-1/day5/Mini Project/index.html
+++ b/Week-1/day5/Mini Project/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (min-device-width: 1320px)" href="large.css" />
+    <link rel="stylesheet" media="screen and (min-device-width: 768px) and (max-device-width: 992px)" href="medium.css" />
+    <link rel="stylesheet" media="screen and (min-device-width: 600px) and (max-device-width: 768px)" href="bigmobile.css" />
+    <link rel="stylesheet" media="screen and (max-device-width: 600px)" href="mobile.css" />
+    
+    <title>Products</title>
+    <link rel="icon" href="image1.png">
+
     <title>Shopping Website</title>
   </head>
   <body>
