--- a/Week-1/day5/Mini Project/products.html
+++ b/Week-1/day5/Mini Project/products.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" media="screen and (min-device-width: 1200px)" href="large.css" />
-    <link rel="stylesheet" media="screen and (min-device-width: 992px) and (max-device-width: 1200px)" href="products.css" />
+
+    <link rel="stylesheet" href="products.css" />
+
+    <link rel="stylesheet" media="screen and (min-device-width: 1320px)" href="large.css" />
     <link rel="stylesheet" media="screen and (min-device-width: 768px) and (max-device-width: 992px)" href="medium.css" />
     <link rel="stylesheet" media="screen and (min-device-width: 600px) and (max-device-width: 768px)" href="bigmobile.css" />
     <link rel="stylesheet" media="screen and (max-device-width: 600px)" href="mobile.css" />
-
-
-
-
-
-
+    
     <title>Products</title>
+    <link rel="icon" href="image1.png">
+
   </head>
   <body>
 
