--- a/Week-1/day5/Mini Project/signup.html
+++ b/Week-1/day5/Mini Project/signup.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="login-signup.css">
+
+    <link rel="stylesheet" media="screen and (min-device-width: 1320px)" href="large.css" />
+    <link rel="stylesheet" media="screen and (min-device-width: 768px) and (max-device-width: 992px)" href="medium.css" />
+    <link rel="stylesheet" media="screen and (min-device-width: 600px) and (max-device-width: 768px)" href="bigmobile.css" />
+    <link rel="stylesheet" media="screen and (max-device-width: 600px)" href="mobile.css" />
+    
     <title>Sign Up</title>
+    <link rel="icon" href="image1.png">
+
   </head>
   <body>
     <header class="header">   
