--- a/Week-1/day5/Mini-Project/index.html
+++ b/Week-1/day5/Mini-Project/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" media="screen and (min-device-width: 1320px)" href="large.css" />
     <link rel="stylesheet" media="screen and (min-device-width: 768px) and (max-device-width: 992px)" href="medium.css" />
     <link rel="stylesheet" media="screen and (min-device-width: 600px) and (max-device-width: 768px)" href="bigmobile.css" />
-    <link rel="stylesheet" media="screen and (max-device-width: 600px)" href="bigmobile.css" />
+    <link rel="stylesheet" media="screen and (max-device-width: 600px)" href="mobile.css" />
     
     <title>Products</title>
     <link rel="icon" href="/Images/image1.png">
