--- a/week-2/day3/ColorPicker/index.html
+++ b/week-2/day3/ColorPicker/index.html
@@ -9,6 +9,7 @@
     <title>boxes</title>
   </head>
   <body>
+    haha
     <label for="colorpicker">Color Picker:</label>
     <input type="color" id="colorpicker" value="#0000ff">
   </body>
