--- a/week-4/day5/ExercisesXPNinja/index.html
+++ b/week-4/day5/ExercisesXPNinja/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hang Man</title>
+    <style>
+
+    #stars, #line2 {
+        display: flex;
+        height: 20vh;
+        font-size: 150px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+  
+       
+      </style>
 </head>
 <body>
+    
+
     <script src="script.js"></script>
 </body>
 </html>
