--- a/week-4/day5/ExercisesXPNinja/index.html
+++ b/week-4/day5/ExercisesXPNinja/index.html
@@ -7,21 +7,20 @@
     <title>Hang Man</title>
     <style>
 
-    #stars, #line2 {
+    .stars {
         display: flex;
-        height: 20vh;
+        height: 100vh;
         font-size: 150px;
         text-align: center;
         justify-content: center;
         align-items: center;
     }
   
-       
       </style>
 </head>
 <body>
-    
 
+    <h1 class="stars">Welcome</h1>
     <script src="script.js"></script>
 </body>
 </html>
