--- a/week-5/day5/DailyChallenge/index.html
+++ b/week-5/day5/DailyChallenge/index.html
@@ -13,7 +13,7 @@
     <h1>To Do List</h1>
     <form id="todo">
         
-       <input type="text" id="newTask" placeholder="New Task"><br>
+       <input type="text" id="newTask" placeholder="New Task"><br><br>
         <button type="submit" id="submit">Submit</button>
     </form>
 
