--- a/week-5/day2/ExercisesXPNinja/index.html
+++ b/week-5/day2/ExercisesXPNinja/index.html
@@ -5,7 +5,13 @@
 </head>
 
 <body>
- 
+  <div id="form">
+  <input type="text" pattern="[1-9]*" id="myYear" placeholder="year">
+  <input type="text" pattern="[1-9]*" id="myMonth" placeholder="month">
+  <input type="submit" id="submit">
+</div>
+
+
   <script src="script.js"></script>
 </body>
 </html>
