--- a/week-5/day4/ExercisesXPNinja/index.html
+++ b/week-5/day4/ExercisesXPNinja/index.html
@@ -42,7 +42,7 @@
     </div>
     <!--container end-->
 
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
