--- a/week-6/Hackaton/index.html
+++ b/week-6/Hackaton/index.html
@@ -6,11 +6,6 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <form id="form1" onsubmit="getValue()"> 
-      <label>Your Story: </label><input type="text" name="story" value="story"><br>
-      <input type="submit" value="submit"> 
-  </form> 
-
     <input placeholder="Enter a City Name"
       id="searchTextField"
       class="controls"
@@ -18,7 +13,7 @@
     />
 
     <div id="map"></div>
-
+    <button id="button">SEE STORIES</button>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3PGx5_AtuORzpdvj1ek2odcsZvY1H29Y&callback=getInit&libraries=places&v=weekly"
       defer ></script>
