--- a/week-6/Hackaton/index.html
+++ b/week-6/Hackaton/index.html
@@ -12,8 +12,17 @@
       type="text"
     />
 
+    <div class="popup">
+      <span class="popuptext" id="myPopup">Double Click on the Map to add Marker!</span>
+    </div>
+
     <div id="map"></div>
-    <button id="button">SEE STORIES</button>
+
+<div class="buttons">
+    <button id="button1">Open Stories</button>
+    <button id="button2">Close Stories</button>
+</div>
+    <div id="stories"></div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3PGx5_AtuORzpdvj1ek2odcsZvY1H29Y&callback=getInit&libraries=places&v=weekly"
       defer ></script>
