need to fix drag

--- a/week-6/Hackaton/index.html
+++ b/week-6/Hackaton/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
     <title>Places Search Box</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://kit.fontawesome.com/5e6676adce.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <input placeholder="Enter a City Name"
@@ -11,19 +13,20 @@
       class="controls"
       type="text"
     />
-
     <div class="popup">
-      <span class="popuptext" id="myPopup">Double Click on the Map to add Marker!</span>
+      <div class="arrow" id="arrowid"><i class="fa-solid fa-arrow-up fa-4x"></i> </div>
+      <span class="popuptextStart" id="explain">Welcome! In order to start using <i>My Marker</i> start serching for a city you wish to place your first marker around!</span>
+      <span class="popuptext" id="myPopup">DOUBLE CLICK anywhere on the Map to add Marker!</span>
     </div>
 
     <div id="map" class="map"></div>
 
-    <button id="button">Open Stories</button>
+    <button id="button"> Open Stories</button>
     <div id="stories"></div>
+    <script src="script.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3PGx5_AtuORzpdvj1ek2odcsZvY1H29Y&callback=getInit&libraries=places&v=weekly"
       defer ></script>
-    <script src="script.js"></script>
 
   </body>
 </html>
