almost done, need to responsive

--- a/week-6/Hackaton/index.html
+++ b/week-6/Hackaton/index.html
@@ -1,13 +1,17 @@
 <html>
   <head>
-    <title>Places Search Box</title>
+    <title>My Marker</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="download.ico" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://kit.fontawesome.com/5e6676adce.js" crossorigin="anonymous"></script>
+   
+
 
   </head>
   <body>
+    <nav id="logo"><h3>My Marker <i class="fa-solid fa-map-marker-alt"></i></h3></nav>
     <input placeholder="Enter a City Name"
       id="searchTextField"
       class="controls"
