new delete button feature and double click no longer zoom in

--- a/week-6/Hackaton/index.html
+++ b/week-6/Hackaton/index.html
@@ -21,7 +21,8 @@
       <div class="arrow" id="arrowid"><i class="fa-solid fa-arrow-up fa-4x"></i> </div>
       <span class="popuptextStart" id="explain">Welcome! In order to start using <i>My Marker</i> start serching for a city you wish to place your first marker around!</span>
       <span class="popuptext" id="myPopup">DOUBLE CLICK anywhere on the Map to add Marker!</span>
-    </div>
+      <span class="drag" id="dragPopup">You can drag the marker to change the location"     </span>   
+      </div>
 
     <div id="map" class="map"></div>
 
