--- a/week-9/day4/DailyChallenge/index.html
+++ b/week-9/day4/DailyChallenge/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
    
   </head>
   <body>
- 
+    <h1> Your Gif Collection!</h1>
+    <form id="form">
+    <input type="text" placeholder="Search for a type of gifs" id="text" value="">
+    <button type="submit" class="b">Find</button>
+    <button type="button" id="delete" class="b">Delete All</button>
+  </form>
+  <div id="space"></div>
+
   <script src="script.js">
 
   </script>
