--- a/week-9/day4/ExercisesXPNinja/index.html
+++ b/week-9/day4/ExercisesXPNinja/index.html
@@ -7,7 +7,13 @@
    
   </head>
   <body>
- 
+    <form id="form">
+    <input type="text" placeholder="search for a type of gifs" id="text" value="">
+    <button type="submit">Find</button>
+    <button type="button" id="delete">Delete</button>
+  </form>
+  <div id="space"></div>
+
   <script src="script.js">
 
   </script>
