--- a/week-12/day3/local_storage/<!DOCTYPE html>.html
+++ b/week-12/day3/local_storage/<!DOCTYPE html>.html
@@ -5,9 +5,10 @@
     <title></title>
   </head>
   <body>
+    <button id="clear" onClick='clearNote()'>Clear My List</button>
     <h1>Notes to Myself</h1>
     <input type="text" id="note" value="" placeholder="Notes...">
-    <button onClick='saveNote()'>Save...</button>
+    <button onClick='saveNote()'>Add...</button>
     <div id='root'></div>
     <script src="script.js" charset="utf-8"></script>
   </body>
