--- a/week-12/day5-list/index.html
+++ b/week-12/day5-list/index.html
@@ -17,7 +17,17 @@
       <button type="submit" id="submit" >Submit</button>
     </form>
     <button id="delete">Delete All</button>
-    <div id="root"></div>
+    <button id="save" >Save</button>
+
+    <div id="root">
+
+    </div>
+
+    <div id="weekly">
+        <h3>Your Weekly Graph:</h3>
+        <table id="table">
+        </table>
+    </div>    
 
 
   <script src="dist/index.js">
