--- a/week-12/day5-list/index.html
+++ b/week-12/day5-list/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!--<li><a href="list.html">The List</a></li>-->
-    <h3 id="add">Add a new task here:</h3>
+    <h2 id="add">Add a new task here:</h2>
     <form id="form">
       <label>Title:</label><input type="text" value="" placeholder="Title" id="name" required ><br>
       <label>Description:</label><input type="text" value="" placeholder="Description" id="description" required><br>
@@ -16,9 +16,10 @@
 
       <button type="submit" id="submit" >Submit</button>
     </form>
+    <div class="actions">
     <button id="delete">Delete All</button>
     <button id="save" >Save</button>
-
+    </div>
     <div id="root">
 
     </div>
